--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,9 @@
 /*===========================
-//Base: base, variables
+//Base: base, variables, normalize
 ===========================*/
 @import 'base/_variables.scss';
 @import 'base/_base.scss';
+@import 'base/_normalize.scss';
 
 /*===========================
 //Layout(macro): header, main, footer
